--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/bharathmighty248/Fundoo-Notes-Using-Graphql#readme",
   "dependencies": {
     "apollo-server-express": "^3.5.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.7.2",
     "mongoose": "^6.0.12"
