--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/bharathmighty248/Fundoo-Notes-Using-Graphql#readme",
   "dependencies": {
+    "apollo-server-errors": "^3.3.0",
     "apollo-server-express": "^3.5.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.7.2",
+    "joi": "^17.4.2",
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
