--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -21,11 +21,15 @@
     "apollo-server-errors": "^3.3.0",
     "apollo-server-express": "^3.5.0",
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.4",
     "dotenv": "^10.0.0",
+    "easygraphql-tester": "^6.0.1",
     "express": "^4.17.1",
     "graphql": "^15.7.2",
+    "jest": "^27.3.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.1.3",
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
