--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 4000
 DB_URL = "mongodb://localhost:27017/Fundoonotes-App"
 JWT_SECRET = "mynameispasumarthivvsnbharathdeveloper"
+MAIL_SENDER = "bharathmiighty248@gmail.com"
+PASSWORD = "mechanicallions"
