--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.3",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "nodemailer": "^6.7.1"
   },
   "devDependencies": {
     "eslint": "^8.3.0",
