--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.3",
     "mongoose": "^6.0.12",
-    "nodemailer": "^6.7.1"
+    "nodemailer": "^6.7.1",
+    "winston": "^3.3.3",
+    "winston-mongodb": "^5.0.7"
   },
   "devDependencies": {
     "eslint": "^8.3.0",
