--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "^27.3.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mocha": "^9.1.3",
     "mongoose": "^6.0.12",
     "nodemailer": "^6.7.1",
