--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mocha": "^9.1.3",
     "mongoose": "^6.0.12",
     "nodemailer": "^6.7.1",
+    "redis": "^4.0.1",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.7"
   },
